On Campaign Show page Fund now and Facebook button alignment issue.
On Campaign Show page Fund now and Facebook button alignment issue.

--- a/web-app/css/campaign.css
+++ b/web-app/css/campaign.css
@@ -1068,3 +1068,23 @@ label.cr-spend-guide-text{
 img.home-img-large-size{
     width: 100%;
 }
+.show-header-height {
+    height: 100% !important;
+    margin-left: -38px;
+}
+.show-header-navtabs .navbar-collapse.collapse{
+    height: 70% !important;
+}
+.show-paddingsbtn {
+    padding-left: 180px;
+}
+.show-paddingsbtn-submitapprov{
+    padding-left: 180px;
+}
+.show-tabsDesktop-headers {
+    top: 5px;
+    left: 18px;
+}
+.show1-Primary{
+	display: none;
+}
